Final Updated Notebook without Review

--- a/02-lsp_extension/02.00-lsp_intro.ipynb
+++ b/02-lsp_extension/02.00-lsp_intro.ipynb
@@ -55,10 +55,10 @@
     "\n",
     "Here are a few of the features that we will cover in this tutorial: \n",
     "1. **Code Completion:** LSP provides intelligent code completion suggestions, helping developers write code faster and with fewer errors. It suggests relevant code snippets, function names, variable names, and other context-specific completions.\n",
-    "2. **Hover Information:** LSP allows the display of hover information, which provides additional details about symbols, functions, or variables when the user hovers over them. This can include documentation, function signatures, or type information.\n",
-    "3. **Signature Help:** This assists developers by displaying the parameters and their types for a particular function or method. This helps ensure that the correct arguments are passed when calling functions.\n",
-    "4. **Go to Definition:** This allows developers to navigate directly to the definition of a symbol or identifier. This is particularly useful for understanding how code is implemented and for jumping between different parts of a codebase.\n",
-    "5. **Find References:** LSP allows developers to find all references to a particular symbol or identifier within a codebase. This facilitates understanding how a symbol is used throughout the code and assists with tasks such as refactoring or debugging.\n",
+    "2. **Go to Definition:** This allows developers to navigate directly to the definition of a symbol or identifier. This is particularly useful for understanding how code is implemented and for jumping between different parts of a codebase.\n",
+    "3. **Find References:** LSP allows developers to find all references to a particular symbol or identifier within a codebase. This facilitates understanding how a symbol is used throughout the code and assists with tasks such as refactoring or debugging.\n",
+    "4. **Hover Information:** LSP allows the display of hover information, which provides additional details about symbols, functions, or variables when the user hovers over them. This can include documentation, function signatures, or type information.\n",
+    "5. **Signature Help:** This assists developers by displaying the parameters and their types for a particular function or method. This helps ensure that the correct arguments are passed when calling functions.\n",
     "\n",
     "-----\n",
     "\n"
@@ -97,7 +97,7 @@
    "source": [
     "For your convenience, jupyterlab-lsp is already added as an extension to the environment.yml file, located in the binder folder. However, if you would like to add it on your own using a new environment and notebook, simply open the extension manager (puzzle piece on left sidebar) and search \"JupyterLab LSP\" extension in the searchbar. Click install. After the installation is complete, you will be prompted to enable the installed extension. Click on the \"Enable\" button to activate the LSP extension. Restart JupyterNotebook for the changes to take effect and verify the installation. \n",
     "\n",
-    "At the bottom of the toolbar, make sure the LSP server is fully initialized. If you click on it, you will see that it is either running or not. You may need to install additional dependancies to run the LSP server through the command line in terminal."
+    "**IMPORTANT:** At the bottom of the toolbar, make sure the LSP server is fully initialized. If you click on it, you will see that it is either running or not. You may need to install additional dependancies to run the LSP server through the command line in terminal. You can also view all the LSP extension settings by going to Settings on the top toolbar -> Advanced Settings Editor, where you will see a whole list of features that you can modify!"
    ]
   },
   {
