--- a/02-lsp_extension/02.01-lsp_exercises1.ipynb
+++ b/02-lsp_extension/02.01-lsp_exercises1.ipynb
@@ -15,7 +15,7 @@
    "id": "398be116-b840-48af-95dc-410b1ba0a88d",
    "metadata": {},
    "source": [
-    "Before we jump into each exercise, here's a layout of the structure of the exercises. Each LSP feature has a set of steps and 3 levels of difficulty - easy, medium, hard - included that you will attempt to complete. If you get stuck anywhere, rerun the cell, refer to the documentation, or better yet, ask the Internet! These exercises should be relatively easy to complete. The more screen-time you spend learning, the more intutitve it'll come to you when you're actually coding on your own! Practice makes perfect! With that, good luck!"
+    "Before we jump into each exercise, here's a layout of the structure of the exercises. Each LSP feature has a set of steps and 3 levels of difficulty - easy, medium, hard - included that you will attempt to complete. If you get stuck anywhere, rerun the cell, refer to the documentation, or better yet, ask the Internet! If you don't see the LSP extensions pop-up, try refreshing the page. These exercises should be relatively easy to complete. The more screen-time you spend learning, the more intutitve it'll come to you when you're actually coding on your own! Practice makes perfect! With that, good luck!"
    ]
   },
   {
@@ -48,10 +48,12 @@
    },
    "source": [
     "### Steps:\n",
-    "1. **Trigger code completion:** While typing your code, you can trigger code completion by pressing a specific key or using a keyboard shortcut. The exact key or shortcut depends on your code editor or IDE. Typically, it is triggered by pressing Ctrl+Space (or Cmd+Space on macOS) or by **typing a trigger character, such as a period \".\" or an opening parenthesis \"(\"**\n",
-    "2. **View code completion suggestions:** Once code completion is triggered, a list of suggestions or completions will appear. These suggestions are based on the context of your code and the language server's understanding of the programming language. The suggestions may include keywords, variable names, function names, class names, and more.\n",
+    "1. **Trigger code completion:** While typing your code, you can trigger code completion by pressing a specific key or using a keyboard shortcut. The exact key or shortcut depends on your code editor or IDE. Typically, it is triggered by **typing a trigger character, such as a period \".\" or an opening parenthesis \"(\"**\n",
+    "2. **View code completion suggestions:** Once code completion is triggered, a list of suggestions or completions will appear. These suggestions are based on the context of your code and the language server's understanding of the programming language. The suggestions may include keywords, variable names, function names, class names, and more. **Hit tab** to view the different suggestions.\n",
     "3. **Navigate and select suggestions:** Use the **arrow keys or the mouse to navigate through the list of code completion suggestions**. As you move through the list, the editor or IDE may display additional information about each suggestion, such as function signatures or documentation.\n",
-    "4. **Insert selected completion:** When you find the desired completion suggestion, you can insert it into your code by **pressing Enter or by clicking on the suggestion with your mouse**. The selected completion will be inserted at the current cursor position, helping you save time and reduce typing errors."
+    "4. **Insert selected completion:** When you find the desired completion suggestion, you can insert it into your code by **pressing Enter or by clicking on the suggestion with your mouse**. The selected completion will be inserted at the current cursor position, helping you save time and reduce typing errors.\n",
+    "\n",
+    "*To *really* take it up a notch, go to Settings on the top toolbar -> Advanced Settings Editor -> Code Completion. Under this tool, you can enable \"Continuous hinting\". This can and will get annoying very quickly, but can be useful if you're just starting to code. "
    ]
   },
   {
@@ -87,8 +89,8 @@
     "\n",
     "name = \"John\"  # Replace with your preferred string value\n",
     "\n",
-    "# Trigger code completion after typing 'nam' and select the suggestion for 'name'\n",
-    "print(name)\n"
+    "# Trigger code completion after typing '(nam' and select the suggestion for 'name'\n",
+    "print\n"
    ]
   },
   {
@@ -96,7 +98,7 @@
    "id": "7eee15ca-e8e0-4a93-866e-cd9545c34c20",
    "metadata": {},
    "source": [
-    "* You may have noticed using the open parenthesis gave you a template to follow rather than autofilling. We will discuss this later on."
+    "* You may have noticed that typing the first open parenthesis gives you a template to follow rather than autofilling. We will discuss this later on."
    ]
   },
   {
@@ -139,8 +141,8 @@
     "# Create an instance of the Person class\n",
     "person = Person(\"John\", 30)  # Replace with a name and age of your choice\n",
     "\n",
-    "# Trigger code completion after typing 'person.' and select a method suggestion i.e. print(person.greet())\n",
-    "print(person.greet())"
+    "# Trigger code completion by typing '.' after \"person\" and select a method suggestion i.e. print(person.greet())\n",
+    "print(person"
    ]
   },
   {
@@ -177,11 +179,11 @@
     "    return length * width\n",
     "\n",
     "# Test the function with sample values\n",
-    "length = 5.0  # Replace with a length of your choice\n",
-    "width = 3.0   # Replace with a width of your choice\n",
+    "length =   # Replace with a length of your choice\n",
+    "width =    # Replace with a width of your choice\n",
     "\n",
     "# Trigger code completion after typing 'calculate_area(' and select the suggestion\n",
-    "area = calculate_area(length, width)\n",
+    "area = calculate_area\n",
     "\n",
     "print(\"Area:\", area)"
    ]
@@ -215,9 +217,9 @@
    "metadata": {},
    "source": [
     "### Steps:\n",
-    "1. **Trigger \"Go to Definition\":** To use the \"Go to Definition\" feature, you typically right-click on a symbol (variable, function, class, etc.) or use a keyboard shortcut (Cmd + B to jump to the definition or Ctrl+Click to view definition from that point). This action triggers the \"Go to Definition\" command, and the language server will attempt to find the definition of the symbol.\n",
+    "1. **Trigger \"Go to Definition\":** To use the \"Go to Definition\" feature, you can **right-click on a symbol** (variable, function, class, etc.) and click \"Jump to Definition\" or use a keyboard shortcut **(Cmd + B to jump to the definition or Ctrl+Click to view definition from that point)**. This action triggers the \"Go to Definition\" command, and the language server will attempt to find the definition of the symbol.\n",
     "2. **Navigate to the definition:** Once you trigger the \"Go to Definition\" command, the editor will attempt to locate the definition of the symbol you clicked on. It might jump to the definition in the current file or navigate to a different file within your project if you clicked jump to definition. \n",
-    "3. **Return to the original location:** After viewing the definition, you can usually go back to the original location where you triggered the \"Go to Definition\" command. This allows you to easily navigate between different parts of your codebase."
+    "3. **Return to the original location:** After viewing the definition, you can go back to the original location where you triggered the \"Go to Definition\" command by click **Alt/Option+o**. This brings you back to your previous destination your cursor was at."
    ]
   },
   {
@@ -226,31 +228,32 @@
    "metadata": {},
    "source": [
     " **Easy Level**\n",
-    "1. Objective: Practice using the Go to Definition feature to navigate to the definition of a variable."
+    "1. Objective: Practice using the Go to Definition feature to navigate to the definition of a variable by using right click. *Note, you must always *define* the value first before triggering \"Go-to-Definition\" otherwise you will get an error that says \"No jump targets found\" when triggering this feature"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "d6734783-3bfd-4d01-a477-e342f0c4469e",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "42\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2949605439.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[8], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    num =   # Declare variable with an integer value\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "# Exercise 4 - Go to Definition of Variables\n",
     "\n",
-    "num = 42  # Replace with an integer value\n",
+    "num =   # Declare variable with an integer value\n",
     "\n",
-    "print  # Trigger Go to Definition on 'num'"
+    "print(num) # Trigger Go to Definition on 'num'"
    ]
   },
   {
@@ -260,7 +263,7 @@
    "source": [
     "**Medium Level**\n",
     "\n",
-    "2. Objective:  Practice using the Go to Definition feature to navigate to the definition of functions."
+    "2. Objective:  Practice using the Go to Definition feature to navigate to the definition of functions by using Ctrl+Hover."
    ]
   },
   {
@@ -285,7 +288,7 @@
     "def add(a, b):\n",
     "    return a + b\n",
     "\n",
-    "result = add  # Trigger Go to Definition on 'add'\n",
+    "result = add(3,4)  # Trigger Go to Definition on 'add'\n",
     "\n",
     "print(result)"
    ]
@@ -297,12 +300,12 @@
    "source": [
     "**Hard Level**\n",
     "\n",
-    "3. Objective: Practice using the Go to Definition feature to navigate to the definition of classes."
+    "3. Objective: Practice using the Go to Definition feature to navigate to the definition of classes by using Cmd/Ctrl+B."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "bc8795fe-2d7b-400e-8d26-00d446c6f533",
    "metadata": {
     "tags": []
@@ -312,7 +315,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Area: 15.0\n"
+      "Area: 15\n"
      ]
     }
    ],
@@ -328,7 +331,7 @@
     "        return self.length * self.width\n",
     "\n",
     "# Instantiate an object of the Rectangle class\n",
-    "rectangle = Rectangle  # Trigger Go to Definition on 'Rectangle'\n",
+    "rectangle = Rectangle(5, 3)  # Trigger Go to Definition on 'Rectangle' \n",
     "\n",
     "area = rectangle.calculate_area()  # Trigger Go to Definition on 'calculate_area'\n",
     "\n",
@@ -360,7 +363,7 @@
    "source": [
     "### Steps:\n",
     "1. **Place the cursor on the symbol:** Move your cursor to the symbol (variable, function, class, etc.) for which you want to find references.\n",
-    "2. **Trigger \"Find References\":** You can typically trigger the \"Find References\" command by right-clicking on the symbol or using a keyboard shortcut (such as ...?). This action tells the language server to search for references to the symbol.\n",
+    "2. **Trigger \"Find References\":** You can typically trigger the \"Find References\" command by **right-clicking on the symbol**. This action tells the language server to search for references to the symbol.\n",
     "3. **View the references:** Once you trigger the \"Find References\" command, the editor will display a list of locations where the symbol is referenced. This list may include file names, line numbers, or other relevant information. You can usually navigate through the list to inspect each reference.\n",
     "4. **Navigate to a reference:** Select a reference from the list, and the editor will take you to the corresponding location in your code. This allows you to explore how the symbol is used in different parts of your project.\n",
     "5. **Return to the reference list:** After inspecting a reference, you can usually return to the reference list to select another reference to navigate to. This allows you to navigate between different references efficiently."
@@ -445,14 +448,12 @@
    "source": [
     " **Hard Level**\n",
     "\n",
-    "For this exercise, you won't be able to do perform the exercise within this notebook. Do note however that when creating multiple Python files within the same directory, you can use the Find References feature on the variable or function to locate all references across the files.\n",
-    "\n",
-    "3. Objective: Practice using the Find References feature to locate all references of a function within a codebase."
+    "For this exercise, you won't be able to perform the exercise within this notebook. Do note however that when creating multiple Python files within the same directory, you can use the Find References feature on the variable or function to locate *all references* across *all the files*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "e00bbae1-8277-482f-8e0b-7715fd965e46",
    "metadata": {
     "tags": []
@@ -496,14 +497,6 @@
     "    <img src=\"https://media.giphy.com/media/iF2s2pVdMZoC66SDfK/giphy.gif\" width=\"350\" height=\"350\"/>\n",
     "</p>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b23a925-0fb2-4ec2-9942-4fee11c1e9f2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
