--- a/codeFormatter/yapf.ipynb
+++ b/codeFormatter/yapf.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "[notebook](https://www.kaggle.com/code/deveshupreti/models-comparision-food-ingredients-and-allergens) from Kaggle\n",
     "\n",
