--- a/codeFormatter/autopep8.ipynb
+++ b/codeFormatter/autopep8.ipynb
@@ -53,7 +53,8 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/kaggle/input/food-ingredients-and-allergens/food_ingredients_and_allergens.csv\")\n",
+    "df = pd.read_csv(\n",
+    "    \"/kaggle/input/food-ingredients-and-allergens/food_ingredients_and_allergens.csv\")\n",
     "df.head()"
    ]
   },
@@ -133,7 +134,7 @@
    },
    "outputs": [],
    "source": [
-    "df.drop_duplicates(inplace = True)\n",
+    "df.drop_duplicates(inplace=True)\n",
     "df.shape"
    ]
   },
@@ -158,7 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "df.isna().sum()\n"
+    "df.isna().sum()"
    ]
   },
   {
@@ -182,7 +183,7 @@
    },
    "outputs": [],
    "source": [
-    "df.dropna(inplace = True)\n",
+    "df.dropna(inplace=True)\n",
     "df.shape"
    ]
   },
@@ -225,7 +226,7 @@
    "outputs": [],
    "source": [
     "for item in list(df.columns):\n",
-    "    print(item , \"   \" , df[item].nunique())"
+    "    print(item, \"   \", df[item].nunique())"
    ]
   },
   {
@@ -249,7 +250,7 @@
    },
    "outputs": [],
    "source": [
-    "df[(df['Allergens'] == 'None')&(df['Prediction']==\"Contains\")]"
+    "df[(df['Allergens'] == 'None') & (df['Prediction'] == \"Contains\")]"
    ]
   },
   {
@@ -281,7 +282,8 @@
    },
    "outputs": [],
    "source": [
-    "df['Prediction'] = np.where((df['Allergens'] == 'None')&(df['Prediction']==\"Contains\"),\"Does not contain\",df['Prediction'])"
+    "df['Prediction'] = np.where((df['Allergens'] == 'None') & (\n",
+    "    df['Prediction'] == \"Contains\"), \"Does not contain\", df['Prediction'])"
    ]
   },
   {
@@ -298,7 +300,7 @@
    },
    "outputs": [],
    "source": [
-    "df[(df['Allergens'] == 'None')&(df['Prediction']==\"Contains\")]"
+    "df[(df['Allergens'] == 'None') & (df['Prediction'] == \"Contains\")]"
    ]
   },
   {
@@ -322,7 +324,7 @@
    },
    "outputs": [],
    "source": [
-    "X = df.drop(['Prediction','Allergens'], axis  =1)\n",
+    "X = df.drop(['Prediction', 'Allergens'], axis=1)\n",
     "y = pd.DataFrame(df['Prediction'])"
    ]
   },
@@ -348,8 +350,8 @@
    "outputs": [],
    "source": [
     "for column in list(X.columns):\n",
-    "    X[column+' '+'Label'] = X[column].map(dict(zip(pd.Series(X[column].unique()),pd.Series([i for i in range(X[column].nunique())]))))\n",
-    "    "
+    "    X[column+' '+'Label'] = X[column].map(dict(zip(pd.Series(\n",
+    "        X[column].unique()), pd.Series([i for i in range(X[column].nunique())]))))"
    ]
   },
   {
@@ -366,7 +368,8 @@
    },
    "outputs": [],
    "source": [
-    "X.drop(['Food Product', 'Main Ingredient', 'Sweetener', 'Fat/Oil', 'Seasoning'], axis =1 , inplace = True)\n",
+    "X.drop(['Food Product', 'Main Ingredient', 'Sweetener',\n",
+    "       'Fat/Oil', 'Seasoning'], axis=1, inplace=True)\n",
     "X.head()"
    ]
   },
@@ -401,8 +404,9 @@
    },
    "outputs": [],
    "source": [
-    "y['Prediction Label'] = y['Prediction'].map({\"Contains\":1,\"Does not contain\" : 0})\n",
-    "y.drop(['Prediction'], axis =1 , inplace =True)\n",
+    "y['Prediction Label'] = y['Prediction'].map(\n",
+    "    {\"Contains\": 1, \"Does not contain\": 0})\n",
+    "y.drop(['Prediction'], axis=1, inplace=True)\n",
     "y.head()"
    ]
   },
@@ -429,7 +433,8 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train , X_test , y_train , y_test = train_test_split(X,y , test_size=0.2 , random_state=23, stratify=y)"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=23, stratify=y)"
    ]
   },
   {
@@ -457,9 +462,9 @@
     "\n",
     "model = RandomForestClassifier()\n",
     "\n",
-    "model.fit(X_train , y_train)\n",
+    "model.fit(X_train, y_train)\n",
     "\n",
-    "rf_score = model.score(X_test , y_test)\n",
+    "rf_score = model.score(X_test, y_test)\n",
     "\n",
     "rf_score"
    ]
@@ -489,9 +494,9 @@
     "\n",
     "model = DecisionTreeClassifier()\n",
     "\n",
-    "model.fit(X_train , y_train)\n",
+    "model.fit(X_train, y_train)\n",
     "\n",
-    "dt_score = model.score(X_test , y_test)\n",
+    "dt_score = model.score(X_test, y_test)\n",
     "\n",
     "dt_score"
    ]
@@ -521,9 +526,9 @@
     "\n",
     "model = KNeighborsClassifier()\n",
     "\n",
-    "model.fit(X_train , y_train)\n",
+    "model.fit(X_train, y_train)\n",
     "\n",
-    "kn_score = model.score(X_test , y_test)\n",
+    "kn_score = model.score(X_test, y_test)\n",
     "\n",
     "kn_score"
    ]
@@ -553,9 +558,9 @@
     "\n",
     "model = SVC()\n",
     "\n",
-    "model.fit(X_train , y_train)\n",
+    "model.fit(X_train, y_train)\n",
     "\n",
-    "svc_score = model.score(X_test , y_test)\n",
+    "svc_score = model.score(X_test, y_test)\n",
     "\n",
     "svc_score"
    ]
@@ -581,14 +586,13 @@
    },
    "outputs": [],
    "source": [
-    "score = { \n",
-    "    'Model_Name' : ['Random Forest','Decision Tree','K Neighbors','SVC '],\n",
-    "       'Score'   : [rf_score, dt_score,kn_score,svc_score]\n",
-    "        }\n",
+    "score = {\n",
+    "    'Model_Name': ['Random Forest', 'Decision Tree', 'K Neighbors', 'SVC '],\n",
+    "    'Score': [rf_score, dt_score, kn_score, svc_score]\n",
+    "}\n",
     "\n",
-    "score_df= pd.DataFrame(score)\n",
-    "score_df\n",
-    "\n"
+    "score_df = pd.DataFrame(score)\n",
+    "score_df"
    ]
   },
   {
@@ -614,9 +618,10 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "fig = plt.figure(figsize = (8, 5))\n",
-    "barplot = plt.bar(score_df.Model_Name, score_df.Score,color =['red', 'yellow', 'pink', 'cyan'] ,edgecolor = \"black\", width = 0.25)\n",
-    "plt.bar_label(barplot , labels= round(score_df.Score,3), label_type='center')\n",
+    "fig = plt.figure(figsize=(8, 5))\n",
+    "barplot = plt.bar(score_df.Model_Name, score_df.Score, color=[\n",
+    "                  'red', 'yellow', 'pink', 'cyan'], edgecolor=\"black\", width=0.25)\n",
+    "plt.bar_label(barplot, labels=round(score_df.Score, 3), label_type='center')\n",
     "plt.xlabel(\"Model Name\")\n",
     "plt.ylabel(\"Score\")\n",
     "plt.title(\"MODEL AND THEIR SCORES\")\n",
