saving changes before merging to feature branch

--- a/codeFormatter/TutorialDraft.ipynb
+++ b/codeFormatter/TutorialDraft.ipynb
@@ -2,35 +2,91 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "190aa852-83c2-49ee-8d79-4a8a25af22e6",
+   "id": "075c7603-1fd1-4aa5-90d6-f63df3aef320",
    "metadata": {},
    "source": [
-    "TOC\n",
+    "# Introduction to Code Formatter\n",
     "\n",
-    "What is a code formatter?\n",
-    "- does not fix code from valid to invalid (if it can't compile, it can't format)\n",
+    "This notebook is an introduction to the [jupyterlab-code-formatter](https://github.com/ryantam626/jupyterlab_code_formatter) extension. What is a code formatter and why is it useful? To start, take a look at the code cell below (a snippet encoding Runge-Kutta 2 from when I was learning to use Python to code some numerical methods). It is not formatted particularly well, though it is not awful. It can be made easier to read if you select the cell, right click it, and pick \"Format Cell\" from the options at the very bottom of that menu. Give it a shot!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1d08dc27-c719-4b23-bb56-7fdc304dcd61",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# %load example.py\n",
+    "import numpy as np\n",
+    "import pylab as plt\n",
     "\n",
-    "Work through basic examples (spaces between assignment operators and variables/values, list exploding, line length, etc...)\n",
-    "- line length\n",
-    "- "
+    "\n",
+    "### Part b\n",
+    "def myrk2(f, tspan, y0, N, params):\n",
+    "    t0, tN = tspan\n",
+    "    t = np.linspace(t0, tN, N + 1)\n",
+    "    h = t[1] - t[0]\n",
+    "    y = np.zeros((*t.shape, *np.array(y0).shape))\n",
+    "    y[0] = y0\n",
+    "    for k in range(N):\n",
+    "        tk, yk = t[k], y[k]\n",
+    "        k1 = h * f(tk, yk, params)\n",
+    "        k2 = h * f(tk + h, yk + k1, params)\n",
+    "        y[k + 1] = yk + (k1 + k2) / 2\n",
+    "    return t, y"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e95eecaa-3485-4da1-854b-a46c2eeaace5",
+   "id": "1a0115a3-7e0e-46e8-97a0-e300106ecf21",
    "metadata": {},
    "source": [
-    "Different formatters often have different philosophies\n",
+    "As you can see, this code snippet would still compile the exact same way, but it is easier to read and separate the different variables from each other. This is what code formatters are for. A code formatter takes code that can be compiled and automatically makes it as human readable as possible. Of course, there are different code formatters and different views of what makes code easier to read. This extension gives you different formatters to choose from and leaves you in control of how your code formatting is automated.\n",
     "\n",
-    "Black is focused on decreasing the number of diffs and having a completely unaltered standard\n",
-    "    Blue is like black, but less restrictive in terms of user configuration, but blue will not be addressed significantly in this tutorial due to version differences\n",
+    "## Some Code Formatters for Python\n",
     "\n",
-    "yapf is... highly configurable and very strict\n",
+    "For the Python language, there is a set of guidelines on how to format Python code to make it more human readable for a variety of reasons. [INCLUDE REASONS HERE] This extension supports code formatters for Python and R, but we will focus on code formatters for Python in this tutorial. The main four are:\n",
     "\n",
-    "autopep8 is... very loose and only checks for pep8 compliance\n",
+    "- black\n",
+    "- YAPF\n",
+    "- autopep8\n",
+    "- isort\n",
     "\n",
-    "isort focuses on only the import statements"
+    "Each of these three code formatters are compliant with the [pep8](https://pep8.org/https://pep8.org/) guidelines, but each have their own styling philosophies and purposes.\n",
+    "\n",
+    "### Black\n",
+    "\n",
+    "Black is one of the most prominent Python code formatters for a reason. It's very straightforward and does not require much decision making. For Black 23.3.0, the [documentation](https://black.readthedocs.io/en/stable/index.htmlhttps://black.readthedocs.io/en/stable/index.html) says:\n",
+    "\n",
+    "> By using Black, you agree to cede control over minutiae of hand-formatting. In return, Black gives you speed, determinism, and freedom from pycodestyle nagging about formatting. You will save time and mental energy for more important matters.\n",
+    ">\n",
+    "> Black makes code review faster by producing the smallest diffs possible. Blackened code looks the same regardless of the project you’re reading. Formatting becomes transparent after a while and you can focus on the content instead.\n",
+    "\n",
+    "To these ends, Black has made a crucial design decision. It is the least configurable code formatter available for Python. It stringently follows its own formatting preferences, preferences which go beyond the pep8 guidelines. If you use Black for code formatting, you will have the exact same approach for every project that you use.\n",
+    "\n",
+    "### YAPF\n",
+    "\n",
+    "YAPF is a code formatter that is owned by Google, though it is not a Google product in any way. Compared to Black, YAPF is very configurable. From the [repository](https://github.com/google/yapfhttps://github.com/google/yapf), its purpose is different from Black:\n",
+    "\n",
+    "> In essence, the algorithm takes the code and calculates the best formatting that conforms to the configured style. It takes away a lot of the drudgery of maintaining your code.\n",
+    ">\n",
+    "> The ultimate goal is that the code YAPF produces is as good as the code that a programmer would write if they were following the style guide.\n",
+    "\n",
+    "This being said, YAPF goes beyond pep8\n",
+    "\n",
+    "### autopep8\n",
+    "\n",
+    "### isort"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5fd1a4f-16d2-4d23-92be-50281ae2fe26",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -70,37 +126,6 @@
    "outputs": [],
    "source": [
     "# %load emptyLines.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "a3b2e1dd-5a4a-4124-8db9-1067f09869b8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# %load imports.py\n",
-    "import os\n",
-    "import sys\n",
-    "\n",
-    "import sys, os\n",
-    "\n",
-    "from subprocess import Popen, PIPE\n",
-    "\n",
-    "import mypkg.sibling\n",
-    "from mypkg import sibling\n",
-    "from mypkg.sibling import example\n",
-    "\n",
-    "import myclass\n",
-    "import foo.bar.yourclass\n",
-    "\n",
-    "from . import sibling\n",
-    "from .sibling import example\n",
-    "\n",
-    "from myclass import MyClass\n",
-    "from foo.bar.yourclass import YourClass"
    ]
   },
   {
